--- a/css/index.css
+++ b/css/index.css
@@ -99,8 +99,33 @@ header .nav-items a {
   margin-bottom: 2%;
   padding: 1rem;
 }
-header .nav-items #active-item {
+header #active-item {
+  color: black;
   font-style: bold;
+}
+@media (max-width: 500px) {
+  header .nav-items {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: space-between;
+    font-size: 2rem;
+  }
+  header .nav-items a {
+    border-right: none;
+  }
+}
+@media (max-width: 700px) {
+  header .nav-items {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: space-between;
+    font-size: 2rem;
+  }
+  header .nav-items a {
+    border-right: none;
+  }
 }
 .title-container {
   display: inline-flex;
@@ -110,24 +135,62 @@ header .nav-items #active-item {
 }
 .title-container .main-img {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 .title-container img {
-  justify-content: center;
   max-width: 80%;
-  align-content: center;
+}
+@media (max-width: 500px) {
+  .title-container {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: space-between;
+  }
+  .title-container .main-img {
+    width: 80%;
+  }
+  .title-container .text-cont h3 {
+    font-size: 50px;
+  }
+}
+@media (max-width: 800px) {
+  .title-container {
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .title-container .main-img {
+    width: 80%;
+  }
+  .title-container .text-cont h3 {
+    font-size: 40px;
+  }
+  .title-container .text-cont .contact-anch a {
+    display: flexbox;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
 }
 .text-cont {
-  display: block;
+  display: flexbox;
   position: absolute;
   width: 30%;
+  align-items: center;
+  justify-content: center;
 }
 .text-cont h3 {
-  font-size: 60px;
-  font-style: bold;
+  font-size: 70px;
   color: white;
   text-align: center;
+}
+.text-cont .contact-anch {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 .text-cont a {
   position: absolute;
@@ -136,32 +199,62 @@ header .nav-items #active-item {
   text-align: center;
   border-radius: 2px;
   font-size: 20px;
-  justify-content: center;
-  align-items: center;
   padding: 10px;
-  color: black;
   background-color: white;
+  color: black;
 }
 .artists-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  text-align: center;
 }
 .artists-container .artist {
-  border: 4px solid red;
+  flex-direction: column;
+  line-height: 1.5;
   width: 40%;
-  justify-content: space-between;
-  justify-content: space-around;
-  align-items: center;
 }
 .artists-container .artist img {
-  justify-content: center;
   max-width: 60%;
+  margin: 10px;
+  border-radius: 15px;
 }
-.artists-container .artist a {
-  margin-right: 50%;
-  float: right;
-  align-items: center;
+.artists-container .artist img:hover {
+  opacity: 80%;
+}
+.artists-container .artist .anchor {
+  text-align: center;
   justify-content: center;
+  width: auto;
+  margin: 20px;
   font-size: 24px;
+}
+.artists-container .artist .bio {
+  width: auto;
+  height: auto;
+  margin: 30px;
+}
+@media (max-width: 800px) {
+  .artists-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .artists-container .artist {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .artists-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .artists-container .artist {
+    width: 100%;
+  }
 }
