--- a/less/main.less
+++ b/less/main.less
@@ -6,78 +6,168 @@
     
 
    .main-img {
-       display: flex;
-   justify-content: center;
+   display: flex;
    align-items: center;
+   justify-content: center;
    }
 
     img{
-        justify-content: center;
         max-width: 80%;
-        align-content: center;
           
     }
 
 
 }
+//Media for title containeer
+@media (max-width: 500px) {
+       
+    .title-container {
+         width: 100%;
+         flex-direction: column;
+         justify-content: center;
+         justify-content: space-between;
+        
+
+        .main-img{
+             width: 80%;
+         }
+
+         .text-cont h3{
+            font-size: 50px;
+    
+
+         }
+
+ }
+}
+//Media for title container
+@media (max-width: 800px) {
+
+    .title-container {
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
+       
+
+       .main-img{
+            width: 80%;
+        }
+
+        .text-cont h3{
+           font-size: 40px;
+
+        }
+
+        .text-cont .contact-anch a {
+            display: flexbox;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+        }
+}
 
 .text-cont{
-    display: block;
+    display: flexbox;
     position: absolute;
     // left: 40;
     // right: 40;
     width: 30%;
+    align-items: center;
+    justify-content: center;
 
      h3 {
-    font-size: 60px;
-    font-style: bold;
-    color: white;
-    text-align: center;  
+    font-size: 70px;
+    color: white; 
+    text-align: center; 
    
      }
 
-  a{
-    position: absolute;
-    margin-top: 5%;
-    margin-left: 30%;
-    text-align: center;
-    border-radius: 2px;
-    font-size: 20px;
+.contact-anch{
+    text-align: center; 
     justify-content: center;
     align-items: center;
-    padding: 10px;
-    color: black;
-    background-color: white;
+}
+
+  a{
+    .anchor-positioning();
+    .button-sizing-prop(2px, 20px, 10px);
+    .button-colors(white,black);
    }
 
 }
 
+
 .artists-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    .flex-artist-container();
 
 
     .artist{
-     border: 4px solid red;
+    flex-direction: column;
+    line-height: 1.5;
       width: 40%;
-       justify-content: space-between;
-        justify-content: space-around;
-        align-items: center;
+
+
 
         img{
-            justify-content: center;
             max-width: 60%;
-
+            margin: 10px;
+            border-radius: 15px;
         }
 
-        a {
-            margin-right: 50%;
-            float: right;
-            align-items: center;
+        img:hover{
+            opacity: 80%;
+        }
+
+        .anchor {
+            text-align: center;
             justify-content: center;
+            width: auto;
+            margin: 20px;
             font-size: 24px
+        }
+        .bio{
+            width: auto;
+            height: auto;
+            margin: 30px;
+
         }
     }
 }
 
+//Media for artist
+
+@media (max-width: 800px) {
+    .artists-container{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center; 
+
+   .artist{
+       width: 100%;
+
+   }
+    
+    }
+}
+
+//Media for artist - Mobile
+
+@media (max-width: 500px) {
+    .artists-container{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center; 
+
+   .artist{
+       width: 100%;
+
+   }
+    
+    }
+}
